--- a/package.json
+++ b/package.json
@@ -8,12 +8,47 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/merriweather": "^0.1.0",
+    "@expo-google-fonts/poppins": "^0.1.0",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^11.0.0",
+    "@react-native-firebase/storage": "^11.0.0",
+    "axios": "^0.21.1",
+    "blob": "^0.1.0",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-cn-richtext-editor": "^1.0.42",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-htmlview": "^0.16.0",
+    "react-native-image-picker": "^3.2.1",
+    "react-native-pell-rich-editor": "^1.7.0",
+    "react-native-popup-dialog": "^0.18.3",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-render-html": "^5.1.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-touchable-bounce": "^1.0.3",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.2.3",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.6.0",
+    "react-navigation-stack": "^2.10.3",
+    "react-navigation-tabs": "^2.11.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
