--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/merriweather": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^11.0.0",
@@ -32,6 +33,7 @@
     "react-native-cn-richtext-editor": "^1.0.42",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-htmlview": "^0.16.0",
+    "react-native-icon-badge": "^1.1.3",
     "react-native-image-picker": "^3.2.1",
     "react-native-pell-rich-editor": "^1.7.0",
     "react-native-popup-dialog": "^0.18.3",
@@ -44,6 +46,7 @@
     "react-native-webview": "^11.2.3",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.6.0",
+    "react-navigation-header-buttons": "^7.0.0",
     "react-navigation-stack": "^2.10.3",
     "react-navigation-tabs": "^2.11.0",
     "react-redux": "^7.2.2",
